<resources>
    <string name="app_name">FileManager</string>

    <string name="category_image">Picture</string>
    <string name="category_music">Music</string>
    <string name="category_video">Video</string>
    <string name="category_document">Document</string>
    <string name="category_qq">QQ</string>
    <string name="category_wechat">WeChat</string>
    <string name="category_apk">APK</string>
    <string name="category_favorite">Favorite</string>
    <string name="category_archive">Archive</string>
    <string name="category_others">Others</string>

    <string name="category_storage">Category</string>
    <string name="phone_storage">Phone Storage</string>

    <string name="menu_setting">Setting</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_sponsor">Sponsor</string>
    <string name="menu_about">About</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_denied_copy">Permission Denied to Copy, please go to setting-app-FileManage to allow permission</string>
    <string name="permission_denied_delete">Permission Denied to Delete, please go to setting-app-FileManage to allow permission</string>
    <string name="permission_denied_rename">Permission Denied to rename, , please go to setting-app-FileManage to allow permission</string>
    <string name="no_read_permission">No read permission, please go to setting-app-FileManage to allow permission</string>
    <string name="no_write_permission">No write permission, you can\'t use copy delete and others function</string>

    <string name="empty">Empty</string>

    <string name="phone">Phone</string>
    <string name="sdcard">SDCard</string>

    <string name="empty_folder">Can\'t open empty folder.</string>
    <string name="unknown_type">Can\'t open unknow type file.</string>

    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="favorite">Favorite</string>
    <string name="encryption">Encryption</string>
    <string name="share">Share</string>
    <string name="detail">Detail</string>
    <string name="overflow">Overflow</string>

    <string name="paste">Paste</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort By</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="last_modify">Last modified</string>
    <string name="directory_sort_mode">Directory Sort Mode</string>
    <string name="folder_on_top">Folders on top</string>
    <string name="file_on_top">File on top</string>
    <string name="none_on_top">None on top</string>

    <string name="switch_sd_card">Show SD Card</string>
    <string name="switch_phone">Show Phone</string>

    <string name="ascending">Ascending</string>
    <string name="ascending_subtitle">Use ascending order</string>
    <string name="show_hide_files">Show hide files</string>
    <string name="show_hide_files_subtitle">Show the files start with .</string>
    <string name="filter_small_pictures">Filter small size pictures</string>
    <string name="filter_small_pictures_subtitle">Don\'t show the pictures size less 30kb</string>
    <string name="file_sort_type">Filter small size pictures</string>

    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="git_report">Report bugs or new feature request via GitHub</string>
    <string name="mail_report">Report bugs or new feature request via Email</string>
    <string name="wechat_donate">Wechat Donate</string>
    <string name="alipay_donate">Alipay Donate</string>
    <string name="wechat_donate_subtitle">Use WeChat to sponsor the author</string>
    <string name="alipay_donate_subtitle">Use AliPay to sponsor the author</string>

    <string name="v1_0_0" translatable="false">v1.0.0</string>
    <string name="chengxing_huang" translatable="false">ChengxingHuang</string>
    <string name="git_issue" translatable="false">https://github.com/ChengxingHuang/FileManager/issues/</string>
    <string name="mail_address" translatable="false">chengxinghuang@126.com</string>

    <string name="search_files">Search files</string>

    <string name="no_apk">There is no APK files</string>
    <string name="no_picture">There is no picture files</string>
    <string name="no_music">There is no music files</string>
    <string name="no_video">There is no video files</string>
    <string name="no_document">There is no document files</string>
    <string name="no_qq">There is no QQ files</string>
    <string name="no_wechat">There is no Wechat files</string>
    <string name="no_archive">There is no Archive files</string>
    <string name="no_favorite">There is no favorite files</string>

    <string name="available">Available:</string>
    <string name="total">Total:</string>

    <string name="is_empty">is empty.</string>
    <string name="new_folder">Please input folder name</string>
    <string name="create_folder">Create folder</string>
    <string name="folder_exist">Folder is exist</string>
    <string name="create_folder_error">Create folder error</string>

    <string name="copying">Copying</string>
    <string name="copy_fail">Copy failed</string>
    <string name="delete_success">Delete success</string>
    <string name="delete_fail">Delete failed</string>
    <string name="is_exist">is exist.Do you want to cover it?</string>

    <string name="modify_date">Modified Date</string>
    <string name="modify_time">Modified Time</string>
    <string name="path">Path</string>
    <string name="file_exist">File name is exist.Can\'t rename to this</string>
    <string name="rename_fail">Rename failed</string>
    <string name="special_tips">File name can\'t include special char</string>

    <string name="cancel_favorite">Cancel Favorite</string>
    <string name="delete_no_permission">No permission to delete</string>
    <string name="file_not_exist">File not exist</string>
    <string name="no_storage">There is no storage in your device.</string>

    <string name="no_match_file">No match files.</string>
    <string name="no_enough_space">No enough space to paste.</string>
</resources>
