<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_copy"
        android:title="@string/copy"
        android:icon="@drawable/action_copy"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_cut"
        android:title="@string/cut"
        android:icon="@drawable/action_cut"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/action_delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_overflow"
        android:title="@string/overflow"
        android:icon="@drawable/action_overflow"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/rename"
                android:title="@string/rename"/>
            <item
                android:id="@+id/favorite"
                android:title="@string/favorite"/>
            <item
                android:id="@+id/encryption"
                android:title="@string/encryption"/>
            <item
                android:id="@+id/share"
                android:title="@string/share"/>
            <item
                android:id="@+id/detail"
                android:title="@string/detail"/>
        </menu>
    </item>
</menu>