<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_paste"
        android:title="@string/paste"
        android:icon="@drawable/action_paste"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/action_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/action_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_by"
                android:title="@string/sort_by"/>
            <item
                android:id="@+id/directory_sort_mode"
                android:title="@string/directory_sort_mode"/>
        </menu>
    </item>
</menu>